# readme-auto-scan

./: README.md  package-lock.json  package.json
examples/: README.md
examples/javascript-package/: README.generated.md  package.json
examples/python-django/: README.generated.md  requirements.txt
examples/python-pip/: README.generated.md  main.py  requirements.txt
examples/python-pipenv/: README.generated.md  main.py
examples/python-poetry/: README.generated.md  main.py  pyproject.toml
examples/typescript-package/: README.generated.md  package.json
