[tool.poetry]
name = "example-python-poetry"
version = "1.0.0"
description = "Example Poetry project for README Auto Scan."
authors = ["README Auto Scan"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
